# islelib-go

./: .gitignore  LICENSE  README.md  azure-pipelines.yaml  go.mod  go.sum  makefile  pip-freeze.txt  revive.toml  setup.cfg
docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_static/: godoc-root.html
zdevelop/make_scripts/: make_name.py  make_venv.py  make_version.py
zdevelop/tests/: 0_main_test.go  functions_test.go
zdocs/source/_static/: README.MD
