[version]
target = 0.2
release = 0.2.0

[metadata]
name = islelib
git_org = github.com/illuscio-dev

[testing]
coverage_required = 0.85
test_package = ./...
exclude = 

[options]
setup_requires = 
	setuptools
install_requires = 
tests_require = 
dependency_links = 

[docs.proto]
paths = 

[proto]
root_source_path = 
root_go_package = 
python_output_path = 
python_import_original = 
python_import_replacement = 

[options.extras_require]
dev = 
lint = 
doc = 
	sphinx
	sphinx_rtd_theme
build = 
	packaging
test = 

[build_sphinx]
project = islelib
copyright = '2020, Illuscio'
source-dir = ./zdocs/source
build-dir = ./zdocs/build

