[version]
target = 0.2
release = 0.2.2

[metadata]
name = islelib
git_org = github.com/illuscio-dev

[testing]
timeout = 60
coverage_required = 0.85
race_detection = true
multi_process = true
test_package = ./...
exclude = 
	./zdevelop

[options]
setup_requires = 
	setuptools
install_requires = 
tests_require = 
dependency_links = 

[docs.proto]
paths = 

[proto]
root_source_path = 
root_go_package = 
python_output_path = 
python_import_original = 
python_import_replacement = 

[options.extras_require]
dev = 
lint = 
doc = 
	sphinx
	sphinx_rtd_theme
build = 
	packaging
test = 

[build_sphinx]
project = islelib
copyright = '2020, Illuscio'
source-dir = ./zdocs/source
build-dir = ./zdocs/build

